# 02-simple-redis

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  cliff.toml
benches/: resp.rs
src/: lib.rs  main.rs  network.rs
src/backend/: mod.rs
src/cmd/: echo.rs  hmap.rs  map.rs  mod.rs  set.rs
src/resp/: array.rs  bool.rs  bulk_string.rs  decode.rs  double.rs  encode.rs  frame.rs  integer.rs  map.rs  mod.rs  null.rs  set.rs  simple_error.rs  simple_string.rs
src/respv2/: mod.rs  parse.rs
